#0000 Review: Correction/optimization